Código básico finalizado e funcional