@@ -1,13 +1,13 @@
 import java.util.ArrayList;
-import java.util.Collections;
+//import java.util.Collections;
 import java.util.Comparator;
 import java.util.Iterator;
 import java.util.List;
 import java.util.stream.Collectors;
 
 public class ListaCorridas implements Iterable<Corrida> {
-    private String nomeLista;
-    private ArrayList<Corrida> corridas;
+    private final String nomeLista;
+    private final ArrayList<Corrida> corridas;
 
     public ListaCorridas(String nomeLista) {
         this.nomeLista = nomeLista;
@@ -22,26 +22,29 @@ public class ListaCorridas implements Iterable<Corrida> {
         corridas.add(corrida);
     }
 
+    /*
     public void removerCorrida(int i) {
         corridas.remove(i);
-    }
+    } */
 
     public void removerCorrida(Corrida corrida) {
         corridas.remove(corrida);
     }
 
+    /*
     public int getTamanho() {
         return corridas.size();
-    }
-
+    } */
+/*
     public void ordenarPorData() {
         Collections.sort(corridas);
-    }
+    } */
 
+    /*
     public void ordenarPorDistanciaENome() {
         Collections.sort(corridas, Comparator.comparingInt(Corrida::getDistancia).reversed()
                 .thenComparing(Corrida::getNome));
-    }
+    } */
 
     public List<Corrida> listarPorDificuldade() {
         return corridas.stream()
@@ -63,7 +66,8 @@ public class ListaCorridas implements Iterable<Corrida> {
     public boolean removerPorTrechoNome(String trecho) {
         List<Corrida> encontradas = buscarPorNome(trecho);
         if (encontradas.size() == 1) {
-            return corridas.remove(encontradas.get(0));
+            removerCorrida(encontradas.getFirst());
+            return true;
         }
         return false;
     }
